# cadmium_fire_simulator

./: CMakeLists.txt  CMakePresets.json  README.md  TODO.txt
include/: fire_profile.hpp  fire_simulator.hpp
lib/NFDRS4/: CMakeLists.txt  README.md
lib/NFDRS4/lib/: CMakeLists.txt
lib/behave/: CMakeLists.txt
lib/behave/src/behave/: ContainAdapter.cpp  fireSize.cpp  safety.cpp  slopeTool.cpp  spot.cpp  surfaceFire.cpp  surfaceFuelbedIntermediates.cpp  windAdjustmentFactor.cpp
lib/imgui/: CMakeLists.txt
lib/taskflow/: CMakeLists.txt
src/: date.cpp  date.hpp  fire_fuel_model.cpp  fire_fuel_model.hpp  fire_model.cpp  fire_model.hpp  fire_results.cpp  fire_results.hpp  fire_simulator.cpp  fire_simulator.hpp  http.cpp  http.hpp  image_viewer.cpp  image_viewer.hpp  main.cpp  math.cpp  math.hpp  reference.hpp  reference_eonet.cpp  service.cpp  service.hpp  service_context.cpp  service_context.hpp  service_custom.cpp  service_esa_worldcover.cpp  service_landfire.cpp  service_landfire.hpp  service_landfire_aspect.cpp  service_landfire_canopy_cover.cpp  service_landfire_canopy_height.cpp  service_landfire_elevation.cpp  service_landfire_fuel_model.cpp  service_landfire_slope.cpp  service_manager.cpp  service_manager.hpp  service_nrcan.cpp  service_open_meteo.cpp  service_open_topography.cpp  timer.cpp  timer.hpp  (+1 more)
tests/: service.cpp
